log
Thu 28 Sep 2023 12:18:53 AM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:18: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   39 |   newHeap->capac = NULL;
      |                  ^
heap.c:40:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   40 |   newHeap->size = NULL;
      |                 ^
heap.c:41:24: error: implicit declaration of function ‘createList’ [-Werror=implicit-function-declaration]
   41 |   newHeap->heapArray = createList();
      |                        ^~~~~~~~~~
heap.c:41:22: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   newHeap->heapArray = createList();
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
18307a9
Thu 28 Sep 2023 12:22:47 AM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:61: error: invalid operands to binary * (have ‘long unsigned int’ and ‘heapElem *’ {aka ‘struct nodo *’})
   41 |   newHeap->heapArray = (heapElem *) malloc(sizeof(heapElem) * newHeap->heapArray);
      |                                                             ^ ~~~~~~~~~~~~~~~~~~
      |                                                                      |
      |                                                                      heapElem * {aka struct nodo *}
Compilation failed
9939207
Thu 28 Sep 2023 12:23:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
63374df
Thu 28 Sep 2023 12:25:48 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9c7c495
Thu 28 Sep 2023 12:35:51 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:15: error: comparison between pointer and integer [-Werror]
   22 |   if(pq->size == NULL) return NULL;
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
49850b1
Thu 28 Sep 2023 12:36:10 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
1383c84
Thu 28 Sep 2023 12:36:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
04ee3bc
Thu 28 Sep 2023 12:39:02 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   24 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a6f93cf
Thu 28 Sep 2023 12:41:01 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   23 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
140c04b
Thu 28 Sep 2023 12:42:01 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3c4e810
Thu 28 Sep 2023 12:46:39 AM UTC: 
 heap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:12: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   32 |   nuevoElem->data = data;
      |            ^~
heap.c:33:12: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   33 |   nuevoElem->priority = priority;
      |            ^~
Compilation failed
66c66dd
Thu 28 Sep 2023 12:50:10 AM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:12: error: variable ‘nuevoElem’ set but not used [-Werror=unused-but-set-variable]
   31 |   heapElem nuevoElem;
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
07f4282
Thu 28 Sep 2023 12:52:43 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|2
total_score: 25/70
31f5cc8
Thu 28 Sep 2023 01:09:12 AM UTC: 
 heap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:13: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   52 |     if(padre->priority > pq->heapArray[pq->size]->priority) return;
      |             ^~
heap.c:52:49: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   52 |     if(padre->priority > pq->heapArray[pq->size]->priority) return;
      |                                                 ^~
heap.c:54:28: error: operation on ‘pq->size’ may be undefined [-Werror=sequence-point]
   54 |     pq->heapArray[(pq->size--)/2] = pq->heapArray[pq->size];
      |                   ~~~~~~~~~^~~
heap.c:57:14: error: operation on ‘pq->size’ may be undefined [-Werror=sequence-point]
   57 |     pq->size = (pq->size--)/2;
      |     ~~~~~~~~~^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a890ec5
Thu 28 Sep 2023 01:14:13 AM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:47:41: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   47 |   while(i != 0 && pq->heapArray[(i-1)/2]->priority < pq->heapArray[i]->priority) {
      |                                         ^~
heap.c:47:70: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   47 |   while(i != 0 && pq->heapArray[(i-1)/2]->priority < pq->heapArray[i]->priority) {
      |                                                                      ^~
heap.c:46:12: error: unused variable ‘padre’ [-Werror=unused-variable]
   46 |   heapElem padre;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
cb7e686
Thu 28 Sep 2023 01:16:54 AM UTC: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|2
total_score: 35/70
83ffea2
Thu 28 Sep 2023 01:19:45 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|2
total_score: 35/70
e2e5884
Thu 28 Sep 2023 01:20:13 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
d6e829e
Thu 28 Sep 2023 01:21:30 AM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
0371629
Thu 28 Sep 2023 01:22:18 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:38:61: error: expected ‘)’ before ‘;’ token
   38 |     pq = realloc(pq->heapArray, pq->capac * sizeof(heapElem);
      |                 ~                                           ^
      |                                                             )
heap.c:38:62: error: expected ‘;’ before ‘}’ token
   38 |     pq = realloc(pq->heapArray, pq->capac * sizeof(heapElem);
      |                                                              ^
      |                                                              ;
   39 |   }
      |   ~                                                           
Compilation failed
646a4a9
Thu 28 Sep 2023 01:22:25 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
60aebb9
Thu 28 Sep 2023 01:26:44 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
3642f1c
Thu 28 Sep 2023 01:27:12 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
deb9e5b
Thu 28 Sep 2023 01:27:44 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 35/70
e3c9e63
Thu 28 Sep 2023 01:28:28 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 35/70
f94c7e2
Thu 28 Sep 2023 01:30:55 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
8518ff1
